--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,7 @@
         android:allowBackup="true"
         android:icon="@mipmap/easycuhk_icon_foreground"
         android:label="@string/app_name"
+
         android:networkSecurityConfig="@xml/network_security_config"
         android:roundIcon="@mipmap/easycuhk_icon_round"
         android:supportsRtl="true"
@@ -17,7 +18,9 @@
         <activity android:name=".WebViewer"></activity>
         <activity android:name=".PictureViewer"></activity>
         <activity android:name=".Scanner"></activity>
-        <activity android:name=".MainActivity">
+        <activity android:name=".MainActivity"
+            android:screenOrientation="portrait">
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
